Untested DataGenerationService